[IMP] update docker-compose